primer pagina lista

--- a/index.html
+++ b/index.html
@@ -1,45 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head> 
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Primer proyecto</title>
-        <link rel="stylesheet" href="./css/STYLE.CSS">
-        </head>
-        <body class="portada">
-            <header>
-                <section class="paginas">
-                    <nav >
-                        <ul>
-                            <li><a href="index.html">Inicio</a></li>
-                            <li><a href="./pages/catalogo.html">Catalogo</a></li>
-                            <li><a href="./pages/nosotros.html">Nosotros</a></li>
-                            <li><a href="./pages/carrito.html">Carrito</a></li>
-                        </ul>
-                    </nav>
-                </section>
-                </header>
-        <main class="portada-texto">
-            <h1>SITIO WEB</h1>
-            <h2>URBAN STREET</h2> 
-            <section class="container-img">
-                <div class="imagenes-portada">
-                    <a href="./pages/catalogo.html"> <img class="circulo" src="./assets/pantalon-hombre.jpg" alt="pantalones de hombre"><H3>UNDERWEAR</H3></a>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Primer proyecto</title>
+    <link rel="stylesheet" href="./css/STYLE.CSS">
+</head>
+
+<body>
+    <div class="hero">
+        <section class="paginas">
+        <header>
+                <ul style="list-style: none;">
+                    <li><button><a href="index.html">Inicio</a></button></li>
+                    <li><button><a href="./pages/catalogo.html">Catalogo</a></button></li>
+                    <li><button><a href="./pages/carrito.html">Carrito</a></button></li>
+                    <li><button><a href="./pages/nosotros.html">Nosotros</a></button></li>
+                </ul>
+            </section>
+        </header>
+        <main>
+                <h1>SITIO WEB</h1>
+                <h2>URBAN STREET</h2>
+                    <div class="imagen-portada1">
+                        <a href="./pages/catalogo.html"> <img class="circulo" src="./assets/pantalon-hombre.jpg"
+                            alt="pantalones de hombre">
+                            <H3>UNDERWEAR</H3>
+                    </a>
                 </div>
-                <div class="imagenes-portada">
-                    <a href="./pages/catalogo.html"> <img class="circulo" src="./assets/buzo-hombre.jpg" alt="buzo de hombre"><H3>OVERWEAR</H3></a>
+                <div class="imagen-portada2">
+                    <a href="./pages/catalogo.html"> <img class="circulo" src="./assets/buzo-hombre.jpg"
+                        alt="buzo de hombre">
+                        <H3>OVERWEAR</H3>
+                    </a>
                 </div>
-                <div class="imagenes-portada">
-                    <a href="./pages/catalogo.html"> <img class="circulo" src="./assets/gorra.jpg" alt="gorra new era"><h3>ACCESORIOS</h3></a>
+                <div class="imagen-portada3">
+                    <a href="./pages/catalogo.html"> <img class="circulo" src="./assets/gorra.jpg" alt="gorra new era">
+                        <h3>ACCESORIOS</h3>
+                    </a>
                 </div>
-            </section>  
         </main>
-        <footer>
-            <a href="https://www.whatsapp.com" target="_blank"><h2>contacto</h2></a>
-            <h3>©villalba-2023
-                Politica de privacidad
-                Terminos de servicio</h3>
-        </footer>
-    </body>
+            <footer>
+                <a href="https://www.whatsapp.com" target="_blank">
+                    <h2>Contacto</h2>
+                </a>
+                <h3>©villalba-2023
+                    Politica de privacidad
+                    Terminos de servicio</h3>
+                </footer>
+            </div>
+</body>
+
 </html>
