--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -7,46 +7,76 @@
     <title>catalogo</title>
     <link rel="stylesheet" href="../css/STYLE.CSS">
 </head>
-<body class="estrellas">
+<body>
     <header>
-        <section class="paginas">
-            <nav >
-                <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="catalogo.html">Catalogo</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="carrito.html">Carrito</a></li>
-                </ul>
-            </nav>
-        </section>
-        </header>
+        <ul style="list-style: none;">
+            <li><button><a href="../index.html">Inicio</a></button></li>
+            <li><button><a href="./catalogo.html">Catalogo</a></button></li>
+            <li><button><a href="./carrito.html">Carrito</a></button></li>
+            <li><button><a href="./nosotros.html">Nosotros</a></button></li>
+        </ul>
+</header>
     <main>
-        <h1>catalogo</h1>
-        <SEction class="underwear-catalogo">
-            <h2>UNDERWEAR</h2>
-            <a href="compra.html">JEAN DE HOMBRE<img src="https://image.lexica.art/full_jpg/444c4096-9380-41ce-9590-737478e83c1d" alt="jean usado por un hombre"></a>
-            <a href="compra.html">JEAN DE HOMBRE<img src="https://image.lexica.art/full_jpg/444c4096-9380-41ce-9590-737478e83c1d" alt="jean usado por un hombre"></a>
-            <a href="compra.html">JEAN DE HOMBRE<img src="https://image.lexica.art/full_jpg/444c4096-9380-41ce-9590-737478e83c1d" alt="jean usado por un hombre"></a>
-            <a href="compra.html">JEAN DE HOMBRE<img src="https://image.lexica.art/full_jpg/444c4096-9380-41ce-9590-737478e83c1d" alt="jean usado por un hombre"></a>
-            <a href="compra.html">JEAN DE HOMBRE<img src="https://image.lexica.art/full_jpg/444c4096-9380-41ce-9590-737478e83c1d" alt="jean usado por un hombre"></a>
-            <a href="compra.html">JEAN DE HOMBRE<img src="https://image.lexica.art/full_jpg/444c4096-9380-41ce-9590-737478e83c1d" alt="jean usado por un hombre"></a>
+        <h1>Catalogo</h1>
+        <div class="catalogo-links">
+            <SEction class="underwear-catalogo">
+                <h2>UNDERWEAR</h2>
+            <div class="primeraimg">
+                <a href="compra.html">JEAN<img src="https://image.lexica.art/full_jpg/444c4096-9380-41ce-9590-737478e83c1d" alt="hombre usando el pantalon de jean de la tienda"></a>
+            </div>
+            <div class="segundaimg">
+                <a href="compra.html">JEAN<img src="https://image.lexica.art/full_jpg/5d239ddc-6073-42e1-a34e-74a6db13502b" alt="mujer usando el pantalon de jean de la tienda"></a>
+            </div>
+            <div class="tercerimg">
+                <a href="compra.html">SHORT<img src="https://image.lexica.art/full_jpg/7beab774-936f-454a-acf5-4895decab0a0" alt="hombre usando el pantalon corto de la tienda"></a>
+            </div>
+            <div class="cuartaimg">
+                <a href="compra.html">SHORT<img src="https://image.lexica.art/full_jpg/bdd8d32a-7601-4a1b-8625-402d27539ffb" alt="mujer usando el pantalon corto de la tienda"></a>
+            </div>
+            <div class="quintaimg">
+                <a href="compra.html">PANTALON<img src="https://image.lexica.art/full_jpg/b92b2035-9747-4d60-95d9-96bc96dac4ff" alt="hombre usando el pantalon oversize de la tienda"></a>
+            </div>
+            <div class="sextaimg">
+                <a href="compra.html">PANTALON<img src="https://image.lexica.art/full_jpg/3352e112-9523-47db-9a1d-51d3b5c0529d" alt="mujer usando el pantalon oversize de la tienda"></a>
+            </div>
         </SEction>
         <SEction class="overwear-catalogo">
             <h2>OVERWEAR</h2>
-            <a href="compra.html">BUZO DE HOMBRE<img src="https://image.lexica.art/full_jpg/bb89e7ad-8b89-4357-8412-eb8d073fab9c" alt="buzo usado por un hombre"></a>
-            <a href="compra.html">BUZO DE HOMBRE<img src="https://image.lexica.art/full_jpg/bb89e7ad-8b89-4357-8412-eb8d073fab9c" alt="buzo usado por un hombre"></a>
-            <a href="compra.html">BUZO DE HOMBRE<img src="https://image.lexica.art/full_jpg/bb89e7ad-8b89-4357-8412-eb8d073fab9c" alt="buzo usado por un hombre"></a>
-            <a href="compra.html">BUZO DE HOMBRE<img src="https://image.lexica.art/full_jpg/bb89e7ad-8b89-4357-8412-eb8d073fab9c" alt="buzo usado por un hombre"></a>
-            <a href="compra.html">BUZO DE HOMBRE<img src="https://image.lexica.art/full_jpg/bb89e7ad-8b89-4357-8412-eb8d073fab9c" alt="buzo usado por un hombre"></a>
-            <a href="compra.html">BUZO DE HOMBRE<img src="https://image.lexica.art/full_jpg/bb89e7ad-8b89-4357-8412-eb8d073fab9c" alt="buzo usado por un hombre"></a>
+            <div class="primeraimg">
+                <a href="compra.html">BUZO<img src="https://image.lexica.art/full_jpg/1e2fd12d-4e4e-47a3-bdc4-3b04f1ab7208" alt="hombre usando el buzo de la tienda"></a>
+            </div>
+            <div class="segundaimg">
+                <a href="compra.html">BUZO OVERSIZE<img src="https://image.lexica.art/full_jpg/56650ede-a211-4510-816b-76495c3830bc" alt="mujer usando el buzo oversize de la tienda"></a>
+            </div>
+            <div class="tercerimg">
+                <a href="compra.html">REMERA HOMBRE<img src="https://image.lexica.art/full_jpg/d523e70a-7f5e-4340-af6f-b6c39cb420c0" alt="hombre usando la remera de la tienda"></a>
+            </div>
+            <div class="cuartaimg">
+                <a href="compra.html">REMERA MUJER<img src="https://image.lexica.art/full_jpg/1576b00b-f70b-4bad-9f6d-8dc87bb77da6" alt="mujer usando la remera de la tienda"></a>
+            </div>
+            <div class="quintaimg">
+                <a href="compra.html">ROMPEVIENTO<img src="https://image.lexica.art/full_jpg/a5db4abc-854c-4688-87fc-d6fc6b39a4ab" alt="hombre usando la campera rompeviento de la tienda"></a>
+            </div>
+            <div class="sextaimg">
+                <a href="compra.html">CAMPERA<img src="https://image.lexica.art/full_jpg/89d03556-1121-4c9a-8641-9b113432b37b" alt="mujer usando la campera de la tienda"></a>
+            </div>
         </SEction>
-            <section class="accesorios-catalogo">
+        <SEction class="accesorios-catalogo">
             <h2>ACCESORIOS</h2>
-            <a href="compra.html">RELOJ DE HOMBRE<img src="https://image.lexica.art/full_jpg/9f467e5b-38d8-456d-b9d0-57131f528b8c" alt="reloj de hombre"></a>
-            <a href="compra.html">RELOJ DE HOMBRE<img src="https://image.lexica.art/full_jpg/9f467e5b-38d8-456d-b9d0-57131f528b8c" alt="reloj de hombre"></a>
-            <a href="compra.html">RELOJ DE HOMBRE<img src="https://image.lexica.art/full_jpg/9f467e5b-38d8-456d-b9d0-57131f528b8c" alt="reloj de hombre"></a>
-            <a href="compra.html">RELOJ DE HOMBRE<img src="https://image.lexica.art/full_jpg/9f467e5b-38d8-456d-b9d0-57131f528b8c" alt="reloj de hombre"></a>
-        </section>
+            <div class="primeraimg">
+                <a href="compra.html">RELOJ DE HOMBRE<img src="https://image.lexica.art/full_jpg/96c1d2b8-537a-4a5b-a764-22a347530ece" alt="hombre usando el reloj de la tienda"></a>
+            </div>
+            <div class="segundaimg">
+                <a href="compra.html">RELOJ DE MUJER<img src="https://image.lexica.art/full_jpg/c757c2d4-402c-4713-83d0-8cf96ed3c27d" alt="mujer usando el reloj de la tienda"></a>
+            </div>
+            <div class="tercerimg">
+                <a href="compra.html">GORRA<img src="https://image.lexica.art/full_jpg/0b8e035f-f5a5-4e29-b857-c8079e482bba" alt="gorra de la tienda"></a>
+            </div>
+            <div class="cuartaimg">
+                <a href="compra.html">CADENA DE PLATA<img src="https://image.lexica.art/full_jpg/ab1595b6-5189-4dfd-a455-4c5a13ede944" alt="cadena de plata de la tienda"></a>
+            </div>
+        </SEction>
+    </div>
     </main>
     <footer>
         <a href="https://www.whatsapp.com" target="_blank"><h2>contacto</h2></a>
