--- a/pages/compra.html
+++ b/pages/compra.html
@@ -7,19 +7,16 @@
     <title>compra</title>
     <link rel="stylesheet" href="../css/STYLE.CSS">
 </head>
-<body class="estrellas">
-    <header>
-        <section class="paginas">
-            <nav >
-                <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="catalogo.html">Catalogo</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="carrito.html">Carrito</a></li>
-                </ul>
-            </nav>
-        </section>
-        </header>
+<body>
+    <div class="hero">
+            <header>
+                    <ul style="list-style: none;">
+                        <li><button><a href="../index.html">Inicio</a></button></li>
+                        <li><button><a href="./catalogo.html">Catalogo</a></button></li>
+                        <li><button><a href="./carrito.html">Carrito</a></button></li>
+                        <li><button><a href="./nosotros.html">Nosotros</a></button></li>
+                    </ul>
+            </header>
     <main>
         <section class="rectangulo-rosa">
             <H1>PRODUCTO</H1>
@@ -29,14 +26,15 @@
                 <button>COMPRAR</button>
             </a> 
         </section>
-
-</main>
+        
+    </main>
     
     <footer>
         <a href="https://www.whatsapp.com" target="_blank"><h2>contacto</h2></a>
         <h3>©villalba-2023
             Politica de privacidad
             Terminos de servicio</h3>
-    </footer>
-</body>
+        </footer>
+    </div>
+    </body>
 </html>
