--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -9,17 +9,13 @@
 </head>
 <body class="estrellas">
     <header>
-        <section class="paginas">
-            <nav >
-                <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="catalogo.html">Catalogo</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="carrito.html">Carrito</a></li>
-                </ul>
-            </nav>
-        </section>
-        </header>
+        <ul style="list-style: none;">
+            <li><button><a href="../index.html">Inicio</a></button></li>
+            <li><button><a href="./catalogo.html">Catalogo</a></button></li>
+            <li><button><a href="./carrito.html">Carrito</a></button></li>
+            <li><button><a href="./nosotros.html">Nosotros</a></button></li>
+        </ul>
+</header>
         <main>
             <section class="rectangulo-rosa">
                 <h1>SOBRE NOSOTROS</h1>
