termino 2 paginas responsive

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
 <body>
     <div class="hero">
-        <header>
-                <ul style="list-style: none;">
-                    <li><button><a href="index.html">Inicio</a></button></li>
-                    <li><button><a href="./pages/catalogo.html">Catalogo</a></button></li>
-                    <li><button><a href="./pages/carrito.html">Carrito</a></button></li>
-                    <li><button><a href="./pages/nosotros.html">Nosotros</a></button></li>
-                </ul>
-        </header>
+    <header>
+        <ul style="list-style: none;">
+            <li><button><a href="./index.html">Inicio</a></button></li>
+            <li><button><a href="./pages/catalogo.html">Catalogo</a></button></li>
+            <li><button><a href="./pages/carrito.html">Carrito</a></button></li>
+            <li><button><a href="./pages/nosotros.html">Nosotros</a></button></li>
+        </ul>
+</header>
         <main>
                 <h1>SITIO WEB</h1>
                 <h2>URBAN STREET</h2>
