--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="../css/STYLE.CSS">
 </head>
 <body>
-    <header>
-        <ul style="list-style: none;">
-            <li><button><a href="../index.html">Inicio</a></button></li>
-            <li><button><a href="./catalogo.html">Catalogo</a></button></li>
-            <li><button><a href="./carrito.html">Carrito</a></button></li>
-            <li><button><a href="./nosotros.html">Nosotros</a></button></li>
+    <nav class="header">
+        <ul>
+            <li><a class="active" href="../index.html">Inicio</a></li>
+            <li><a href="./nosotros.html">Nosotros</a></li>
+            <li><a href="./catalogo.html">Catalogo</a></li>
+            <li><a href="./carrito.html">Carrito</a></li>
         </ul>
-</header>
+    </nav>
     <main>
-        <h1>Catalogo</h1>
         <div class="catalogo-links">
+            <h1>Catalogo</h1>
             <SEction class="underwear-catalogo">
                 <h2>UNDERWEAR</h2>
             <div class="primeraimg">
@@ -70,7 +70,7 @@
                 <a href="compra.html">RELOJ DE MUJER<img src="https://image.lexica.art/full_jpg/c757c2d4-402c-4713-83d0-8cf96ed3c27d" alt="mujer usando el reloj de la tienda"></a>
             </div>
             <div class="tercerimg">
-                <a href="compra.html">GORRA<img src="https://image.lexica.art/full_jpg/0b8e035f-f5a5-4e29-b857-c8079e482bba" alt="gorra de la tienda"></a>
+                <a href="compra.html">GORRA<img src="https://image.lexica.art/full_jpg/2d8ac034-a343-4164-a29a-866e2b69788b" alt="gorra de la tienda"></a>
             </div>
             <div class="cuartaimg">
                 <a href="compra.html">CADENA DE PLATA<img src="https://image.lexica.art/full_jpg/ab1595b6-5189-4dfd-a455-4c5a13ede944" alt="cadena de plata de la tienda"></a>
@@ -79,7 +79,7 @@
     </div>
     </main>
     <footer>
-        <a href="https://www.whatsapp.com" target="_blank"><h2>contacto</h2></a>
+        <a href="https://www.whatsapp.com" target="_blank"><h2>Contacto</h2></a>
         <h3>©villalba-2023
             Politica de privacidad
             Terminos de servicio</h3>
