--- a/pages/compra.html
+++ b/pages/compra.html
@@ -8,33 +8,32 @@
     <link rel="stylesheet" href="../css/STYLE.CSS">
 </head>
 <body>
-    <div class="hero">
-            <header>
-                    <ul style="list-style: none;">
-                        <li><button><a href="../index.html">Inicio</a></button></li>
-                        <li><button><a href="./catalogo.html">Catalogo</a></button></li>
-                        <li><button><a href="./carrito.html">Carrito</a></button></li>
-                        <li><button><a href="./nosotros.html">Nosotros</a></button></li>
-                    </ul>
-            </header>
+        <nav class="header">
+            <ul>
+                <li><a class="active" href="../index.html">Inicio</a></li>
+                <li><a href="./nosotros.html">Nosotros</a></li>
+                <li><a href="./catalogo.html">Catalogo</a></li>
+                <li><a href="./carrito.html">Carrito</a></li>
+            </ul>
+        </nav>
     <main>
-        <section class="rectangulo-rosa">
+        <section class="producto-compra">
             <H1>PRODUCTO</H1>
-            <img src="https://image.lexica.art/full_jpg/0e4f907c-13b3-449f-9fe0-8617fc275dae" alt="producto a comprar">
+            <img src="https://image.lexica.art/full_jpg/444c4096-9380-41ce-9590-737478e83c1d" alt="producto a comprar">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores beatae exercitationem odit at iure fugiat, vel molestias laborum. Libero voluptatum magni excepturi quis iste et iure expedita neque totam iusto.</p>
             <a href="carrito.html">
                 <button>COMPRAR</button>
             </a> 
+            <button>$10000</button>
         </section>
         
     </main>
     
     <footer>
-        <a href="https://www.whatsapp.com" target="_blank"><h2>contacto</h2></a>
+        <a href="https://www.whatsapp.com" target="_blank"><h2>Contacto</h2></a>
         <h3>©villalba-2023
             Politica de privacidad
             Terminos de servicio</h3>
         </footer>
-    </div>
     </body>
 </html>
