--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -30,7 +30,7 @@
             </section>
         </main>
     <footer>
-        <a href="https://www.whatsapp.com" target="_blank"><h2>contacto</h2></a>
+        <a href="https://www.whatsapp.com" target="_blank"><h2>Contacto</h2></a>
         <h3>©villalba-2023
             Politica de privacidad
             Terminos de servicio</h3>
