termino pagina de nosotros

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -17,16 +17,12 @@
         </ul>
 </header>
         <main>
-            <section class="rectangulo-rosa">
+            <section class="nosotros-info">
                 <h1>SOBRE NOSOTROS</h1>
                 <img src="../assets/villalba-logo.png" alt="logo de la empresa villalba">
-                <div class="info-nosotros">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita laborum molestias aperiam ducimus quis perspiciatis dolorum labore et provident veritatis maxime cumque omnis, veniam inventore in a explicabo, officiis impedit!</p>
-                </div>
-                <div class="fabrica">
-                    <img src="https://images.unsplash.com/photo-1641785221703-bc1b651da143?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1173&q=80" alt="primer fabrica de la empresa">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis dolore quidem sed natus maiores qui error culpa deleniti dolor officiis ea consequatur, corrupti facere dicta cupiditate. Quasi minima quidem minus!</p>
-                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita laborum molestias aperiam ducimus quis perspiciatis dolorum labore et provident veritatis maxime cumque omnis, veniam inventore in a explicabo, officiis impedit!</p>
+                <img class="fabrica" src="https://images.unsplash.com/photo-1641785221703-bc1b651da143?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1173&q=80" alt="primer fabrica de la empresa">
+                <p class="fabrica-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis dolore quidem sed natus maiores qui error culpa deleniti dolor officiis ea consequatur, corrupti facere dicta cupiditate. Quasi minima quidem minus!</p>
             </section>
         </main>
     <footer>
