--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -18,19 +18,14 @@
 </header>
         <main>
             <section class="tabla">
-                <section class="articulos-tabla">
-                    <H2>ARTICULO</H2>
-                    <p>buzo hombre</p>
-                </section>
-                <section class="cantidad-tabla">
-                    <H2>CANTIDAD</H2>
-                    <p>3</p>
-                </section>
-                <section class="precio-tabla">
-                    <H2>PRECIO</H2>
-                    <p>$300000</p>
-                </section>
-                
+                <H1 class="tabla-titulo">CARRITO DE COMPRAS</H1>
+                <H2 class="tabla-art">ARTICULOS</H2>
+                <H4 class="tabla-articulo">JEAN DE HOMBRE</H4>
+                <H2 class="tabla-cant">CANTIDAD</H2>
+                <H4 class="tabla-cantidad">3</H4>
+                <H2 class="tabla-pre">PRECIO</H2>
+                <H4 class="tabla-precio">$30000</H4>
+                <button class="tabla-comprar">Comprar</button>
             </section>
             </main>
     <footer>
