--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -7,15 +7,15 @@
     <title>Carrito</title>
     <link rel="stylesheet" href="../css/STYLE.CSS">
 </head>
-<body class="estrellas">
-    <header>
-        <ul style="list-style: none;">
-            <li><button><a href="../index.html">Inicio</a></button></li>
-            <li><button><a href="./catalogo.html">Catalogo</a></button></li>
-            <li><button><a href="./carrito.html">Carrito</a></button></li>
-            <li><button><a href="./nosotros.html">Nosotros</a></button></li>
+<body >
+    <nav class="header">
+        <ul>
+            <li><a class="active" href="../index.html">Inicio</a></li>
+            <li><a href="./nosotros.html">Nosotros</a></li>
+            <li><a href="./catalogo.html">Catalogo</a></li>
+            <li><a href="./carrito.html">Carrito</a></li>
         </ul>
-</header>
+    </nav>
         <main>
             <section class="tabla">
                 <H1 class="tabla-titulo">CARRITO DE COMPRAS</H1>
