--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 </head>
 
 <body>
-    <div class="hero">
-    <header>
-        <ul style="list-style: none;">
-            <li><button><a href="./index.html">Inicio</a></button></li>
-            <li><button><a href="./pages/catalogo.html">Catalogo</a></button></li>
-            <li><button><a href="./pages/carrito.html">Carrito</a></button></li>
-            <li><button><a href="./pages/nosotros.html">Nosotros</a></button></li>
+    <nav class="header">
+        <ul>
+            <li><a class="active" href="./index.html">Inicio</a></li>
+            <li><a href="./pages/nosotros.html">Nosotros</a></li>
+            <li><a href="./pages/catalogo.html">Catalogo</a></li>
+            <li><a href="./pages/carrito.html">Carrito</a></li>
         </ul>
-</header>
+    </nav>
         <main>
+            <div class="portada">
                 <h1>SITIO WEB</h1>
                 <h2>URBAN STREET</h2>
-                    <div class="imagen-portada1">
-                        <a href="./pages/catalogo.html"> <img class="circulo" src="./assets/pantalon-hombre.jpg"
-                            alt="pantalones de hombre">
-                            <H3>UNDERWEAR</H3>
+                <div class="imagen-portada1">
+                    <a href="./pages/catalogo.html"> <img class="circulo" src="./assets/pantalon-hombre.jpg"
+                        alt="pantalones de hombre">
+                        <H3>UNDERWEAR</H3>
                     </a>
                 </div>
                 <div class="imagen-portada2">
@@ -39,7 +39,8 @@
                         <h3>ACCESORIOS</h3>
                     </a>
                 </div>
-        </main>
+            </div>
+            </main>
             <footer>
                 <a href="https://www.whatsapp.com" target="_blank">
                     <h2>Contacto</h2>
@@ -48,7 +49,6 @@
                     Politica de privacidad
                     Terminos de servicio</h3>
                 </footer>
-            </div>
-</body>
+            </body>
 
-</html>
+            </html>
