--- a/pages/compra.html
+++ b/pages/compra.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Comprá ropa online ✓ Envío gratis a todo el país ✓ Accedé a lo mejor de la moda.">
+    <meta name="keywords" content="ropa, tienda, moda, ropa de mujer, ropa de hombre, ropa urbana">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>compra</title>
+    <title>Villalba's / Compra</title>
     <link rel="stylesheet" href="../css/STYLE.CSS">
+    <link rel="icon" type="image/png" href="../assets/favicon.png">
 </head>
 <body>
         <nav class="header">
@@ -20,7 +23,11 @@
         <section class="producto-compra">
             <H1>PRODUCTO</H1>
             <img src="https://image.lexica.art/full_jpg/444c4096-9380-41ce-9590-737478e83c1d" alt="producto a comprar">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores beatae exercitationem odit at iure fugiat, vel molestias laborum. Libero voluptatum magni excepturi quis iste et iure expedita neque totam iusto.</p>
+            <p>Product details<br>
+                Colour: Black<br>
+                220gsm 100% ringspun combed organic cotton<br>
+                Screen printed graphics<br>
+                Wash at 30°C. Do not tumble dry. Do not dry clean.</p>
             <a href="carrito.html">
                 <button>COMPRAR</button>
             </a> 
