--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SobreNosotros</title>
+    <title>Villalba's / SobreNosotros</title>
     <link rel="stylesheet" href="../css/STYLE.CSS">
+    <link rel="icon" type="image/png" href="../assets/favicon.png">
 </head>
 <body>
     <nav class="header">
@@ -20,9 +21,9 @@
             <section class="nosotros-info">
                 <h1>SOBRE NOSOTROS</h1>
                 <img src="../assets/villalba-logo.png" alt="logo de la empresa villalba">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita laborum molestias aperiam ducimus quis perspiciatis dolorum labore et provident veritatis maxime cumque omnis, veniam inventore in a explicabo, officiis impedit!</p>
+                <p>Villalba's es una empresa familiar, fundada en el 1987 en la ciudad de mar del plata. desde entonces se mantuvo en la moda siempre trabajando con prendas actualizadas y de primer nivel.</p>
                 <img class="fabrica" src="https://images.unsplash.com/photo-1641785221703-bc1b651da143?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1173&q=80" alt="primer fabrica de la empresa">
-                <p class="fabrica-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis dolore quidem sed natus maiores qui error culpa deleniti dolor officiis ea consequatur, corrupti facere dicta cupiditate. Quasi minima quidem minus!</p>
+                <p class="fabrica-info">Ubicada en el parque industrial de mar del plata esta nuestra fabrica, con el trabajo de muchos especialistas, ingenieros, tecnicos y obreros calificados.  </p>
             </section>
         </main>
     <footer>
