--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primer proyecto</title>
+    <title>Villalba's / Inicio</title>
     <link rel="stylesheet" href="./css/STYLE.CSS">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
 </head>
 
 <body>
