--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -18,7 +18,7 @@
         </ul>
     </nav>
         <main>
-            <section class="tabla">
+            <div class="tabla">
                 <H1 class="tabla-titulo">CARRITO DE COMPRAS</H1>
                 <H2 class="tabla-art">ARTICULOS</H2>
                 <H4 class="tabla-articulo">JEAN DE HOMBRE</H4>
@@ -27,7 +27,7 @@
                 <H2 class="tabla-pre">PRECIO</H2>
                 <H4 class="tabla-precio">$30000</H4>
                 <button class="tabla-comprar">Comprar</button>
-            </section>
+            </div>
             </main>
     <footer>
         <a href="https://www.whatsapp.com" target="_blank"><h2>Contacto</h2></a>
