--- a/pages/compra.html
+++ b/pages/compra.html
@@ -24,10 +24,10 @@
             <H1>PRODUCTO</H1>
             <img src="https://image.lexica.art/full_jpg/444c4096-9380-41ce-9590-737478e83c1d" alt="producto a comprar">
             <p>Product details<br>
-                Colour: Black<br>
-                220gsm 100% ringspun combed organic cotton<br>
-                Screen printed graphics<br>
-                Wash at 30°C. Do not tumble dry. Do not dry clean.</p>
+                Color: Azul<br>
+                220 g/m² 100 % algodón orgánico peinado hilado en anillos<br>
+                Gráficos serigrafiados<br>
+                Lavar a 30°C. No secar en secadora. No lavar en seco.</p>
             <a href="carrito.html">
                 <button>COMPRAR</button>
             </a> 
